# Hygge-Co2-Carbon-Verification-Platform

./: .editorconfig  .gitignore  Dockerfile  Dockerfile.dev  README.md  angular.json  dev.Dockerfile  docker-compose-test.yml  docker-compose.yml  nginx.conf  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.cfg  test.Dockerfile  tsconfig.app.json
backend/api/: Dockerfile  accounting_client.py  auth.py  controller.py  db_data.sql  endpoints.py  models.py  wait-for-postgres.sh
backend/blockchain_publisher/: Dockerfile  accounting_client.py  main.py  models.py
backend/common/: certificate.py  config.py  logger.py  utils.py
frontend/: styles.css
frontend/app/: app.component.spec.ts  app.component.ts  app.config.ts  app.routes.ts  constants.ts
frontend/app/emission-verification/: emission-verification.component.html  emission-verification.component.spec.ts  emission-verification.component.ts
frontend/app/home/: home.component.ts
frontend/app/login/: login.component.ts
frontend/environments/: environment.prod.ts  environment.ts
nginx/: default.conf
src/: index.html  main.ts
src/app/: app.component.html  app.component.ts  app.routes.ts
src/backend/: Dockerfile  accounting_client.py  auth.py  broker_test.py  certificate.py  config.py  controller.py  database-05-31-2024.dump  db_data.sql  endpoints.py  get_certificate_data.py  logger.py  main.py  models.py  utils.py  wait-for-postgres.sh
src/contract/: CO2EmissionCertificate.sol  CertificateFactory-abi.json  CertificateFactory.sol  certificateFactory.sol  co2.sol
(+27 files in other folders)
