[metadata]
name = Hygge CO2 Emissions Verification Portal
description = Hygge CO2 Emissions Verification Portal to verify and publish cerificates on the blockchain
author = Hygge Energy
classifiers =
    Programming Language :: Python :: 3.10 :: Only

[options]
packages =
    backend
install_requires =
    fastapi>=0.111
    python-dotenv>=1.0
    web3>=6.19
    eth-tester>=0.11.0b2
    paho-mqtt>=2.1
    loguru>=0.7
    peewee>=3.17
    psycopg2-binary>=2.9
    py_evm>=0.10
    pyjwt>=2.8
python_requires = ~=3.10
zip_safe = no
